@@ -407,6 +407,18 @@ as follows:</p>
   </dd>
 
   <dt>
+    opacity(amount)
+  </dt>
+  <dd>
+    Applies transparency to the samples in the input image. The value of 'amount' defines the proportion
+    of the conversion. A value of 1 is completely transparent. A value of 0 leaves the
+    input unchanged. Values between 0 and 1 are linear multipliers on the effect.
+    This is equivalent to multiplying the input image samples by (1 - amount).
+    If the 'amount' parameter is missing, a value of 1 is used.
+    The markup equivalent of this function is <a href="#opacityEquivalent">given below</a>.
+  </dd>
+
+  <dt>
     gamma(amplitude exponent offset)
   </dt>
   <dd>
@@ -1498,11 +1510,11 @@ values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 1 0"</pre>
           equivalent to the following matrix operation: 
       <p>
       <object data="mathml/feColorMatrix01.mml" type="application/mathml+xml" width="100%" height="130">
-          <pre>| R' |     |0.213+0.787s  0.715-0.715s  0.072-0.072s 0  0 |   | R |
-| G' |     |0.213-0.213s  0.715+0.285s  0.072-0.072s 0  0 |   | G |
-| B' |  =  |0.213-0.213s  0.715-0.715s  0.072+0.928s 0  0 | * | B |
-| A' |     |           0            0             0  1  0 |   | A |
-| 1  |     |           0            0             0  0  1 |   | 1 |</pre>
+          <pre>| R' |     | (0.2127 + 0.7873s)  (0.7152 - 0.7152s)  (0.0722 - 0.0722s) 0  0 |   | R |
+| G' |     | (0.2127 - 0.2127s)  (0.7152 + 0.2848s)  (0.0722 - 0.0722s) 0  0 |   | G |
+| B' |  =  | (0.2127 - 0.2127s)  (0.7152 - 0.7152s)  (0.0722 + 0.9278s) 0  0 | * | B |
+| A' |     |           0                   0                   0        1  0 |   | A |
+| 1  |     |           0                   0                   0        0  1 |   | 1 |</pre>
       </object>
     </p>
         </li>
@@ -1523,21 +1535,23 @@ values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 1 0"</pre>
           where the terms a00, a01, etc. are calculated as follows: 
       <p>
     <object data="mathml/feColorMatrix03.mml" type="application/mathml+xml" width="100%" height="230">
-          <pre>| a00 a01 a02 |    [+0.213 +0.715 +0.072]
-| a10 a11 a12 | =  [+0.213 +0.715 +0.072] +
-| a20 a21 a22 |    [+0.213 +0.715 +0.072]
-                        [+0.787 -0.715 -0.072]
-cos(hueRotate value) *  [-0.213 +0.285 -0.072] +
-                        [-0.213 -0.715 +0.928]
-                        [-0.213 -0.715+0.928]
-sin(hueRotate value) *  [+0.143 +0.140-0.283]
-                        [-0.787 +0.715+0.072]</pre>
+          <pre>| a00 a01 a02 |     [0.2127 0.7152 0.0722]
+| a10 a11 a12 | =   [0.2127 0.7152 0.0722] +
+| a20 a21 a22 |     [0.2127 0.7152 0.0722]
+
+                                            [ 0.7873 -0.7152 -0.0722]
+                    cos(hueRotate value) *  [-0.2127  0.2848 -0.0722] +
+                                            [-0.2127 -0.7152  0.9278]
+
+                                            [-0.2127 -0.7152  0.9278]
+                    sin(hueRotate value) *  [ 0.143   0.140  -0.283 ]
+                                            [-0.7873  0.7152  0.0722]</pre>
     </object>
     </p>
           Thus, the upper left term of the hue matrix turns out to be:
       <p>
     <object data="mathml/feColorMatrix04.mml" type="application/mathml+xml" width="100%" height="30"> 
-          <pre>.213 + cos(hueRotate value)*.787 - sin(hueRotate value)*.213</pre>
+          <pre>.2127 + cos(hueRotate value) * 0.7873 - sin(hueRotate value) * 0.2127</pre>
       </object>
       </p>
 
@@ -1551,7 +1565,7 @@ sin(hueRotate value) *  [+0.143 +0.140-0.283]
           <pre>   | R' |     |      0        0        0  0  0 |   | R |
    | G' |     |      0        0        0  0  0 |   | G |
    | B' |  =  |      0        0        0  0  0 | * | B |
-   | A' |     | 0.2125   0.7154   0.0721  0  0 |   | A |
+   | A' |     | 0.2127   0.7152   0.0722  0  0 |   | A |
    | 1  |     |      0        0        0  0  1 |   | 1 |</pre>
    </object>
    </p>
@@ -3614,9 +3628,9 @@ The RNG is under construction, and only the individual RNG snippets are availabl
 
 <pre class="examplesource"> &lt;filter id="grayscale"&gt;
     &lt;feColorMatrix type="matrix"
-               values="(0.2125 * [amount]) (0.7154 * [amount]) (0.0721 * [amount]) 0 0
-                       (0.2125 * [amount]) (0.7154 * [amount]) (0.0721 * [amount]) 0 0
-                       (0.2125 * [amount]) (0.7154 * [amount]) (0.0721 * [amount]) 0 0
+               values="(0.2127 * [amount]) (0.7152 * [amount]) (0.0722 * [amount]) 0 0
+                       (0.2127 * [amount]) (0.7152 * [amount]) (0.0722 * [amount]) 0 0
+                       (0.2127 * [amount]) (0.7152 * [amount]) (0.0722 * [amount]) 0 0
                        0 0 0 1 0"/&gt;
   &lt;/filter&gt; </pre>
 
@@ -3651,6 +3665,14 @@ The RNG is under construction, and only the individual RNG snippets are availabl
         &lt;feFuncR type="table" tableValues="[amount] (1 - [amount])"/&gt;
         &lt;feFuncG type="table" tableValues="[amount] (1 - [amount])"/&gt;
         &lt;feFuncB type="table" tableValues="[amount] (1 - [amount])"/&gt;
+    &lt;/feComponentTransfer&gt;
+  &lt;/filter&gt; </pre>
+
+<h3 id="opacityEquivalent">opacity</h3>
+
+<pre class="examplesource"> &lt;filter id="opacity"&gt;
+    &lt;feComponentTransfer&gt;
+        &lt;feFuncA type="table" tableValues="0 [amount]"/&gt;
     &lt;/feComponentTransfer&gt;
   &lt;/filter&gt; </pre>
 
