@@ -1,6 +1,11 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2011-09-07  Dean Jackson  <dino@apple.com>
+
+- Added opacity function
+- Corrected luminanceToAlpha values
+
 2011-08-31  Dean Jackson  <dino@apple.com>
 
 - Remove commas from shorthand function parameter input.
